# Energy-Storage

./: CMakeLists.txt  README.md  todos
application/: CMakeLists.txt  dataCaller.c  dataCaller.h  dates.c  dates.h  functions.c  functions.h  structs.h  tank.c  tank.h
src/: CMakeLists.txt  Electrical-Production-And-Consumption.txt  main.c
test/: CMakeLists.txt  dataCallerTests.c  datesTests.c  functionsTests.c  tankTests.c  testAll.c  testAll.h
